; ModuleID = '/home/carl/AnghaBench/systemd/src/shared/extr_calendarspec.c_calendar_spec_next_usec_impl.c'
source_filename = "/home/carl/AnghaBench/systemd/src/shared/extr_calendarspec.c_calendar_spec_next_usec_impl.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i32 }
%struct.tm = type { i32 }

@USEC_TIMESTAMP_FORMATTABLE_MAX = common dso_local global i32 0, align 4
@EINVAL = common dso_local global i32 0, align 4
@USEC_PER_SEC = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_5__*, i32, i32*)* @calendar_spec_next_usec_impl to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @calendar_spec_next_usec_impl(%struct.TYPE_5__* %0, i32 %1, i32* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.TYPE_5__*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32*, align 8
  %8 = alloca %struct.tm, align 4
  %9 = alloca i64, align 8
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  store %struct.TYPE_5__* %0, %struct.TYPE_5__** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32* %2, i32** %7, align 8
  %12 = load %struct.TYPE_5__*, %struct.TYPE_5__** %5, align 8
  %13 = call i32 @assert(%struct.TYPE_5__* %12)
  %14 = load i32, i32* %6, align 4
  %15 = load i32, i32* @USEC_TIMESTAMP_FORMATTABLE_MAX, align 4
  %16 = icmp sgt i32 %14, %15
  br i1 %16, label %17, label %20

17:                                               ; preds = %3
  %18 = load i32, i32* @EINVAL, align 4
  %19 = sub nsw i32 0, %18
  store i32 %19, i32* %4, align 4
  br label %63

20:                                               ; preds = %3
  %21 = load i32, i32* %6, align 4
  %22 = add nsw i32 %21, 1
  store i32 %22, i32* %6, align 4
  %23 = load i32, i32* %6, align 4
  %24 = load i32, i32* @USEC_PER_SEC, align 4
  %25 = sdiv i32 %23, %24
  %26 = sext i32 %25 to i64
  store i64 %26, i64* %9, align 8
  %27 = load %struct.TYPE_5__*, %struct.TYPE_5__** %5, align 8
  %28 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %27, i32 0, i32 0
  %29 = load i32, i32* %28, align 4
  %30 = call i32 @localtime_or_gmtime_r(i64* %9, %struct.tm* %8, i32 %29)
  %31 = call i32 @assert_se(i32 %30)
  %32 = load i32, i32* %6, align 4
  %33 = load i32, i32* @USEC_PER_SEC, align 4
  %34 = srem i32 %32, %33
  store i32 %34, i32* %11, align 4
  %35 = load %struct.TYPE_5__*, %struct.TYPE_5__** %5, align 8
  %36 = call i32 @find_next(%struct.TYPE_5__* %35, %struct.tm* %8, i32* %11)
  store i32 %36, i32* %10, align 4
  %37 = load i32, i32* %10, align 4
  %38 = icmp slt i32 %37, 0
  br i1 %38, label %39, label %41

39:                                               ; preds = %20
  %40 = load i32, i32* %10, align 4
  store i32 %40, i32* %4, align 4
  br label %63

41:                                               ; preds = %20
  %42 = load %struct.TYPE_5__*, %struct.TYPE_5__** %5, align 8
  %43 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %42, i32 0, i32 0
  %44 = load i32, i32* %43, align 4
  %45 = call i64 @mktime_or_timegm(%struct.tm* %8, i32 %44)
  store i64 %45, i64* %9, align 8
  %46 = load i64, i64* %9, align 8
  %47 = icmp slt i64 %46, 0
  br i1 %47, label %48, label %51

48:                                               ; preds = %41
  %49 = load i32, i32* @EINVAL, align 4
  %50 = sub nsw i32 0, %49
  store i32 %50, i32* %4, align 4
  br label %63

51:                                               ; preds = %41
  %52 = load i32*, i32** %7, align 8
  %53 = icmp ne i32* %52, null
  br i1 %53, label %54, label %62

54:                                               ; preds = %51
  %55 = load i64, i64* %9, align 8
  %56 = trunc i64 %55 to i32
  %57 = load i32, i32* @USEC_PER_SEC, align 4
  %58 = mul nsw i32 %56, %57
  %59 = load i32, i32* %11, align 4
  %60 = add nsw i32 %58, %59
  %61 = load i32*, i32** %7, align 8
  store i32 %60, i32* %61, align 4
  br label %62

62:                                               ; preds = %54, %51
  store i32 0, i32* %4, align 4
  br label %63

63:                                               ; preds = %62, %48, %39, %17
  %64 = load i32, i32* %4, align 4
  ret i32 %64
}

declare dso_local i32 @assert(%struct.TYPE_5__*) #1

declare dso_local i32 @assert_se(i32) #1

declare dso_local i32 @localtime_or_gmtime_r(i64*, %struct.tm*, i32) #1

declare dso_local i32 @find_next(%struct.TYPE_5__*, %struct.tm*, i32*) #1

declare dso_local i64 @mktime_or_timegm(%struct.tm*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
